# shopview

./: .dockerignore  .env.example  .env.python  .gitignore  AUTH_PERMISSION_DESIGN.md  CURRENT-RELEASE.md  DEPLOY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.linux  Dockerfile.prod  Dockerfile.python  PORTS-UPDATED.md  PORTS.md  README.md  build-docker.sh  build-python.sh  build.sh  deploy.sh  docker-compose.app-only.linux.yml  docker-compose.prod.yml  docker-compose.python.yml  docker-compose.yml  docker-entrypoint.sh  init-counter-db.sql  init-db.sql  nginx-python.conf  nginx.conf  nginx.prod.conf  package-lock.json  package.json  python_requirements.txt  replit.md  run_python.py  test-app.html  test_python_app.py  vite.ts  合同与装修履约流程迁移代办.md
attached_assets/: Pasted---1755843129660_1755843129661.txt  Pasted--System-Permissions-users--1755843169785_1755843169786.txt
client/: package-lock.json  package.json  vite.config.ts
config/: nginx.conf
release/shopview-server-deploy-20260525-145647-embedded-wecom-qr-scaled/: STARTUP.md  env.app-only.linux  pyproject.toml  start-backend-direct.py
release/shopview-server-deploy-20260525-145647-embedded-wecom-qr-scaled/client/src/pages/: suppliers.tsx
release/shopview-server-deploy-20260525-145647-embedded-wecom-qr-scaled/python_app/: import_counter_contract_bindings.py
release/shopview-server-deploy-20260525-145647-embedded-wecom-qr-scaled/建表/POS/: JAVA_CREATECRMVIPZK.txt  JAVA_GETSYJRANGE.txt
release/shopview-server-deploy-20260525-145647-embedded-wecom-qr-scaled/建表/商品/: GOODSBARCODE.txt
(+819 files in other folders)
